--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,24 @@
+/* Universal */
+
 body {
 	background: url('../images/grocery-bag.jpg') no-repeat center center fixed;
 	font-family: Arial, sans-serif;
-	text-align: center;
 }
+
+ul {
+	list-style: none;
+	margin-left: 0%;
+	margin-right: 14%;
+}
+
+li {
+	border: 1px dotted black;
+	font-size: 50%;
+	padding: 1%;
+	margin-bottom: 1%;
+}
+
+/* Main Layout elements */
 
 header {
 	border-radius: 5px;
@@ -24,27 +40,20 @@ header {
 	margin: 0 auto;
 	text-align: center;
 	color: black;
+	font-weight: bold;
 	font-size: 200%;
 	padding: 5%;
 }
 
-#additem {
+
+#list {
 	margin: 0 auto;
-	font-size: 50%;
 	text-align: center;
-	width: 70%;
 }
 
-/*
-footer {
-	border: 1px solid black;
-	bottom: 0;
-	height: 1%;
-	margin: 0 auto;
-	font-size: 50%;
-	text-align: center;
-	padding: 1%;
-	font-color: black;
-	font-weight: bold;
+.delete {
+	height: 20px;
+	width: 20px;
+	margin-right: 5%;
+	vertical-align: top;
 }
-*/
